--- a/index.html
+++ b/index.html
@@ -74,11 +74,7 @@
               fill="#F2994A"
             />
           </svg>
-          <form
-            action="https://jsonplaceholder.typicode.com/posts"
-            method="post"
-            class="search-form"
-          >
+          <form class="search-form">
             <input class="search" type="search" placeholder="Я хочу узнать про..." />
             <button class="search-button" type="submit">
               <svg
@@ -126,7 +122,7 @@
       <div class="stripe"></div>
       <div class="container">
         <main class="news">
-          <ul class="news__list">
+          <ul class="news__list news__list_search">
             <li class="news__item">
               <div class="card">
                 <img src="img/unsplash_xsGxhtAsfSA.jpg" alt="" class="preview" />
