--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class="container">
         <div class="search-wrap">
           <svg
+            class="logo"
             xmlns="http://www.w3.org/2000/svg"
             width="76"
             height="40"
@@ -103,12 +104,12 @@
               />
             </svg>
           </form>
-          <div class="select-container">
+          <div class="select-container select-container_gr">
             <select class="custom-select">
-              <option>Россия</option>
-              <option>США</option>
-              <option>Германия</option>
-              <option>Франция</option>
+              <option value="ru">Россия</option>
+              <option value="us">Сша</option>
+              <option value="de">Германия</option>
+              <option value="fr">Франция</option>
             </select>
           </div>
         </div>
@@ -123,7 +124,7 @@
       <div class="container">
         <main class="news">
           <ul class="news__list news__list_search">
-            <li class="news__item">
+            <!-- <li class="news__item">
               <div class="card">
                 <img src="img/unsplash_xsGxhtAsfSA.jpg" alt="" class="preview" />
                 <div class="news__title-wrap">
@@ -408,7 +409,7 @@
                   <p class="news__autor news__time">Эрик Крипке</p>
                 </div>
               </div>
-            </li>
+            </li> -->
           </ul>
         </main>
       </div>
@@ -422,7 +423,7 @@
     <div class="container">
       <main class="news">
         <ul class="news__list news__list_fresh">
-          <li class="news__item">
+          <!-- <li class="news__item">
             <div class="card">
               <img src="img/unsplash_xsGxhtAsfSA.jpg" alt="" class="preview" />
               <div class="news__title-wrap">
@@ -707,7 +708,7 @@
                 <p class="news__autor news__time">Эрик Крипке</p>
               </div>
             </div>
-          </li>
+          </li> -->
         </ul>
       </main>
     </div>
