--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/index.css" />
-    <script type="module" src="script/script.js" defer></script>
+    <script type="module" src="script/script.js"></script>
 
     <link rel="preload" href="fonts/Roboto-Regular.woff2" as="font" type="font/woff2" crossorigin />
     <link rel="preload" href="fonts/Roboto-Bold.woff2" as="font" type="font/woff2" crossorigin />
@@ -116,16 +116,17 @@
         </div>
       </div>
     </header>
-    <div class="hidden">
-      <div class="stripe"></div>
-      <div class="container">
-        <h1 class="title">По вашему запросу “Россия” найдено 8 результатов</h1>
-      </div>
-      <div class="stripe"></div>
-      <div class="container">
-        <main class="news">
-          <ul class="news__list news__list_search">
-            <!-- <li class="news__item">
+    <main>
+      <div class="hidden">
+        <div class="stripe"></div>
+        <div class="container">
+          <h1 class="title">По вашему запросу “Россия” найдено 8 результатов</h1>
+        </div>
+        <div class="stripe"></div>
+        <div class="container">
+          <div class="news">
+            <ul class="news__list news__list_search">
+              <!-- <li class="news__item">
               <div class="card">
                 <img src="img/unsplash_xsGxhtAsfSA.jpg" alt="" class="preview" />
                 <div class="news__title-wrap">
@@ -411,20 +412,20 @@
                 </div>
               </div>
             </li> -->
-          </ul>
-        </main>
+            </ul>
+          </div>
+        </div>
       </div>
-    </div>
 
-    <div class="stripe"></div>
-    <div class="container">
-      <h1 class="title">Свежие новости</h1>
-    </div>
-    <div class="stripe"></div>
-    <div class="container">
-      <main class="news">
-        <ul class="news__list news__list_fresh">
-          <!-- <li class="news__item">
+      <div class="stripe"></div>
+      <div class="container">
+        <h1 class="title">Свежие новости</h1>
+      </div>
+      <div class="stripe"></div>
+      <div class="container">
+        <div class="news">
+          <ul class="news__list news__list_fresh">
+            <!-- <li class="news__item">
             <div class="card">
               <img src="img/unsplash_xsGxhtAsfSA.jpg" alt="" class="preview" />
               <div class="news__title-wrap">
@@ -710,11 +711,11 @@
               </div>
             </div>
           </li> -->
-        </ul>
-      </main>
-    </div>
-    <div class="stripe"></div>
-
+          </ul>
+        </div>
+      </div>
+      <div class="stripe"></div>
+    </main>
     <footer>
       <div class="container">
         <div class="footer-wrap">
